--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,11 @@
 doctype html
-html
+html(ng-app="myApp")
   head
+    meta(charset='utf8')
+    base(href='/')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+        
+        
