Implementado Angular UI Router

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,11 @@ block content
   h1 Olá MEAN Seed
   ul
     li
-      a(href='/') Início
+      a(ui-sref='/') Início
     li
-      a(href='/users') Usuários
+      a(ui-sref='/users') Usuários
 
-  div(data-ng-view)
+  div(data-ui-view)
 
   script(src='javascript/lib/angular/angular.js')
   script(src='javascript/lib/angular-route/angular-route.min.js')
